# discord-roleplay-bot

./: .env.example  .gitignore  Makefile  README.md
go/: go.mod  main.go
rust/: Cargo.toml
rust/data/: example_server_memory.json  example_user_memory.json
rust/src/: gemini_client.rs  lib.rs  memory.rs  openrouter_client.rs
