[package]
name = "ely_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "ely_rust"
crate-type = ["cdylib"] # Crucial for FFI

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = [
  "json",
  "blocking",
] } # Blocking for simplicity in FFI
lazy_static = "1.4.0"
chrono = "0.4" # For potential timestamping if needed later
fern = "0.6" # For logging
log = "0.4"
dirs = "5.0" # To find a good place for data if not local
